test/files/neg/bug608.check
bug608.scala:16: error: type mismatch;
 found   : (a) => a
 required: (hs{type s = hs; type a = ha}#a) => ?
	     = g(f(x).bimap(id))
                            ^
one error found
